--- a/src/views/pages/home.ejs
+++ b/src/views/pages/home.ejs
@@ -1,80 +1,115 @@
 <!-- Separator Line -->
-<div class="border border-blue-500 mx-4"></div>
+<div class="mx-4 border border-blue-500"></div>
 <div class="container mx-auto px-4 py-4">
-    <!-- Featured Articles -->
-    <section class="mb-8">
-        <h2 class="text-3xl font-bold mb-4">Featured Posts of the Past Week</h2>
-        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4">
-            <% homeData.featuredArticles.forEach(article => { %>
-                <a href="/<%= article.slug %>" class="block">
-                    <article class="bg-white p-4 shadow-md hover:shadow-lg hover:scale-105 transition-transform duration-300">
-                        <img alt="<%= article.title %>" class="w-full h-48 object-cover mb-4"
-                            src="<%= article.imageUrl %>" />
-                        <h3 class="text-xl font-semibold mb-2"><%= article.title %></h3>
-                        <p class="text-gray-600 mb-2">Category: <%= article.category %></p>
-                        <p class="text-gray-600 mb-2">Posted Date: <%= article.datePublished %></p>
-                    </article>
-                </a>
-            <% }) %>
-        </div>
-    </section>
+  <!-- Featured Articles -->
+  <section class="mb-8">
+    <h2 class="mb-4 text-3xl font-bold">Featured Posts of the Past Week</h2>
+    <div class="grid grid-cols-1 gap-4 md:grid-cols-2 lg:grid-cols-4">
+      <% homeData.featured.forEach(article => { %>
+      <a href="/post/<%= article._id %>" class="block">
+        <article
+          class="bg-white p-4 shadow-md transition-transform duration-300 hover:scale-105 hover:shadow-lg"
+        >
+          <img
+            alt="<%= article.title %>"
+            class="mb-4 h-48 w-full object-cover"
+            src="<%= article.thumbnail.small %>"
+          />
+          <h3 class="mb-2 text-xl font-semibold"><%= article.name %></h3>
+          <p class="mb-2 text-gray-600">
+            Category: <%= article.category.name %>
+          </p>
+          <p class="mb-2 text-gray-600">
+            Published on: <%= article.publishedDate %>
+          </p>
+        </article>
+      </a>
+      <% }) %>
+    </div>
+  </section>
 
-    <!-- Most Viewed Articles -->
-    <section class="mb-8">
-        <h2 class="text-3xl font-bold mb-4">Most Viewed Articles</h2>
-        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4">
-            <% homeData.mostViewedArticles.forEach(article => { %>
-                <a href="/<%= article.slug %>" class="block">
-                    <article class="bg-white p-4 shadow-md hover:shadow-lg hover:scale-105 transition-transform duration-300">
-                        <img alt="<%= article.title %>" class="w-full h-48 object-cover mb-4"
-                            src="<%= article.imageUrl %>" />
-                        <h3 class="text-xl font-semibold mb-2"><%= article.title %></h3>
-                        <p class="text-gray-600 mb-2">Category: <%= article.category %></p>
-                        <p class="text-gray-600 mb-2">Posted Date: <%= article.datePublished %></p>
-                    </article>
-                </a>
-            <% }) %>
-        </div>
-    </section>
+  <!-- Most Viewed Articles -->
+  <section class="mb-8">
+    <h2 class="mb-4 text-3xl font-bold">Most Viewed Articles</h2>
+    <div class="grid grid-cols-1 gap-4 md:grid-cols-2 lg:grid-cols-4">
+      <% homeData.mostViewed.forEach(article => { %>
+      <a href="/post/<%= article._id %>" class="block">
+        <article
+          class="bg-white p-4 shadow-md transition-transform duration-300 hover:scale-105 hover:shadow-lg"
+        >
+          <img
+            alt="<%= article.title %>"
+            class="mb-4 h-48 w-full object-cover"
+            src="<%= article.thumbnail.small %>"
+          />
+          <h3 class="mb-2 text-xl font-semibold"><%= article.name %></h3>
+          <p class="mb-2 text-gray-600">
+            Category: <%= article.category.name %>
+          </p>
+          <p class="mb-2 text-gray-600">
+            Published on: <%= article.publishedDate.toLocaleDateString("en-US") %>
+          </p>
+        </article>
+      </a>
+      <% }) %>
+    </div>
+  </section>
 
-    <!-- Latest Articles -->
-    <section class="mb-8">
-        <h2 class="text-3xl font-bold mb-4">Latest Posts</h2>
-        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4">
-            <% homeData.latestArticles.forEach(article => { %>
-                <a href="/<%= article.slug %>" class="block">
-                    <article class="bg-white p-4 shadow-md hover:shadow-lg hover:scale-105 transition-transform duration-300">
-                        <img alt="<%= article.title %>" class="w-full h-48 object-cover mb-4"
-                            src="<%= article.imageUrl %>" />
-                        <h3 class="text-xl font-semibold mb-2"><%= article.title %></h3>
-                        <p class="text-gray-600 mb-2">Category: <%= article.category %></p>
-                        <p class="text-gray-600 mb-2">Posted Date: <%= article.datePublished %></p>
-                    </article>
-                </a>
-            <% }) %>
-        </div>
-    </section>
+  <!-- Latest Articles -->
+  <section class="mb-8">
+    <h2 class="mb-4 text-3xl font-bold">Latest Posts</h2>
+    <div class="grid grid-cols-1 gap-4 md:grid-cols-2 lg:grid-cols-4">
+      <% homeData.latest.forEach(article => { %>
+      <a href="/post/<%= article._id %>" class="block">
+        <article
+          class="bg-white p-4 shadow-md transition-transform duration-300 hover:scale-105 hover:shadow-lg"
+        >
+          <img
+            alt="<%= article.name %>"
+            class="mb-4 h-48 w-full object-cover"
+            src="<%= article.thumbnail.small %>"
+          />
+          <h3 class="mb-2 text-xl font-semibold"><%= article.name %></h3>
+          <p class="mb-2 text-gray-600">
+            Category: <%= article.category.name %>
+          </p>
+          <p class="mb-2 text-gray-600">
+            Published on: <%= article.publishedDate.toLocaleDateString("en-US") %>
+          </p>
+        </article>
+      </a>
+      <% }) %>
+    </div>
+  </section>
 
-    <!-- Top 10 Categories -->
-    <section class="mb-8">
-        <h2 class="text-3xl font-bold mb-4">Top 10 Categories</h2>
-        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 xl:grid-cols-3 gap-6">
-            <% homeData.topCategories.forEach(category => { %>
-                <a href="/<%= category.slug %>" class="block">
-                    <article
-                    class="bg-white p-4 shadow-md hover:shadow-lg hover:scale-105 transition-transform duration-300">
-                    <h3 class="text-xl font-semibold mb-4"><%= category.category %></h3>
-                    <div class="flex items-center gap-4">
-                        <img alt="Category thumbnail" class="w-24 h-24 object-cover rounded-lg"
-                            src="https://placehold.co/150x150/EEE/31343C" />
-                        <div>
-                            <h4 class="text-lg font-medium"><%= category.title %></h4>
-                            <p class="text-gray-600">Posted Date: 2023-12-01</p>
-                        </div>
-                    </div>
-                </article>
-                </a>
-            <% }) %>
-        </div>
-    </section>
+  <!-- Top 10 Categories -->
+  <section class="mb-8">
+    <h2 class="mb-4 text-3xl font-bold">Top 10 Categories</h2>
+    <div
+      class="grid grid-cols-1 gap-6 md:grid-cols-2 lg:grid-cols-2 xl:grid-cols-3"
+    >
+      <% homeData.latestEach.forEach(category => { %>
+      <a href="/<%= category.slug %>" class="block">
+        <article
+          class="bg-white p-4 shadow-md transition-transform duration-300 hover:scale-105 hover:shadow-lg"
+        >
+          <h3 class="mb-4 text-xl font-semibold"><%= category.category %></h3>
+          <div class="flex items-center gap-4">
+            <img
+              alt="Category thumbnail"
+              class="h-24 w-24 rounded-lg object-cover"
+              src="<%= category.post.thumbnail.small %>"
+            />
+            <div>
+              <h4 class="text-lg font-medium"><%= category.post.name %></h4>
+              <p class="text-gray-600">
+                Published on: <%= category.post.publishedDate.toLocaleDateString("en-US") %>
+              </p>
+            </div>
+          </div>
+        </article>
+      </a>
+      <% }) %>
+    </div>
+  </section>
 </div>
