--- a/src/views/pages/new_password.ejs
+++ b/src/views/pages/new_password.ejs
@@ -1,12 +1,16 @@
-<div class="max-w-md mx-auto mt-10 bg-white shadow-md rounded-lg p-6">
-  <h2 class="text-2xl font-bold text-gray-800 mb-4 text-center">Set Your New Password</h2>
+<div class="mx-auto mt-10 max-w-md rounded-lg bg-white p-6 shadow-md">
+  <h2 class="mb-4 text-center text-2xl font-bold text-gray-800">
+    Set Your New Password
+  </h2>
   <form action="/set-new-password" method="POST" class="space-y-4">
     <!-- Hidden Email Field -->
     <input type="hidden" name="email" value="<%= email %>" />
 
     <!-- Password Input -->
     <div>
-      <label for="password" class="block text-sm font-medium text-gray-700">New Password</label>
+      <label for="password" class="block text-sm font-medium text-gray-700"
+        >New Password</label
+      >
       <input
         type="password"
         id="password"
@@ -20,7 +24,7 @@
     <!-- Submit Button -->
     <button
       type="submit"
-      class="w-full rounded-md bg-blue-500 py-2 px-4 text-white font-semibold hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-offset-2"
+      class="w-full rounded-md bg-blue-500 px-4 py-2 font-semibold text-white hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-offset-2"
     >
       Save Password
     </button>
